# sandbox

./: .gitignore  README.md  dummy_tree.txt  package-lock.json  package.json  tsconfig.json
euler/: Justfile
euler/19_counting_sundays/: 19.js  19.py
euler/1_multiples_of_3_or_5/: 1.js  1.py  euler1.py
euler/2_even_fibonacci/: 2.js  2.py  euler2.py
euler/3_largest_prime/: 3.js  3.js.map  3.py  3.ts  euler3.py
euler/4_largest_palindrome/: 4.js  4.js.map  4.py  4.ts
euler/5_smallest_multiple/: 5.js  5.js.map  5.ts
euler/6_sum_square_difference/: 6.js  6.js.map  6.ts
euler/7_1001st_prime/: 7.js  7.js.map  7.ts
euler/8_largest_product/: 8.js  8.js.map  8.ts
javascript/: js_arrays.js  js_syntax_lessons.js
python/: Justfile  pyproject.toml  tmux.sh
python/misc/: abc_with_abc.py  cloudinary_up.py  github_readme_scraper.py  minimax.py  thread_decorator.py
python/rich/: game_of_life.py  markdown_softwrap.py
python/textual/: datawidgets.py  string_animator.py  tictactoe.py
webpages/fireworks/: fireworks.html  fireworks2.html  fireworks3.html
webpages/js-clicker-game/: index.html  index.js  style.css
webpages/tictactoe/: index.html  index.js  index.js.map  index.ts  style.css  winnerfuncs.ts
