[project]
name = "python"
version = "0.1.0"
description = "Eds Sandbox python environment"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.0",
    "markdown-it-py>=3.0.0",
    "pyfiglet>=1.0.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "rich-pixels>=3.0.1",
    "textual>=5.0.1",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "textual-dev>=1.7.0",
]
